--- a/content/posts/2020-06-15-porfolio.md
+++ b/content/posts/2020-06-15-porfolio.md
@@ -3,12 +3,14 @@ template: SinglePost
 title: Portfolio
 status: Published
 date: '2020-06-15'
-featuredImage: 'https://ucarecdn.com/d28ab2fb-7c48-4511-ab98-f84dec49fa35/'
+featuredImage: ''
 excerpt: >-
-  Of course I included my portfolio site as one of my projects
+  Static site build with GatsbyJS
 categories:
   - category: Projects
 ---
+>Of course I included my portfolio site as one of my projects. 
+
 ## To build this website, I turned towards GatsbyJS.
 
 [Gatsby](https://www.gatsbyjs.org/) is a static site generator based on React. 
@@ -19,4 +21,4 @@ Rather than build this site from scratch, I decided to start with a template. Th
 
 After cloning a few different projects from the Gatsby showcase to pick apart, I found [Yellowcake](https://github.com/thriveweb/yellowcake). I chose this as I was able to see all the components and how they worked with each other. A surprising amount of projects were importing entire pages and components. If I couldn't see the files themselves, then it really defeated the purpose.
 
-Gatsby is incredibly easy to develop with. I'm very happy I found it and plan on using it for future web projects, rebuilding WildHeart's website with it is near the top of the list.
+Gatsby is incredibly easy to develop with. I'm very happy I found it and plan on using it for future web projects. Rebuilding WildHeart's website with it is near the top of the list.
