update featured image

--- a/content/posts/2020-06-15-porfolio.md
+++ b/content/posts/2020-06-15-porfolio.md
@@ -3,13 +3,15 @@ template: SinglePost
 title: Portfolio
 status: Published
 date: '2020-06-15'
-featuredImage: ''
+featuredImage: 'https://ucarecdn.com/28818e13-0c0c-45fa-9f35-6f03d8372ed1/'
 excerpt: >-
   Static site build with GatsbyJS
 categories:
   - category: Projects
 ---
 >Of course I included my portfolio site as one of my projects. 
+
+![](https://ucarecdn.com/28818e13-0c0c-45fa-9f35-6f03d8372ed1/)
 
 ## To build this website, I turned towards GatsbyJS.
 
