--- a/content/posts/2020-06-15-porfolio.md
+++ b/content/posts/2020-06-15-porfolio.md
@@ -24,3 +24,5 @@ Rather than build this site from scratch, I decided to start with a template. Th
 After cloning a few different projects from the Gatsby showcase to pick apart, I found [Yellowcake](https://github.com/thriveweb/yellowcake). I chose this as I was able to see all the components and how they worked with each other. A surprising amount of projects were importing entire pages and components. If I couldn't see the files themselves, then it really defeated the purpose.
 
 Gatsby is incredibly easy to develop with. I'm very happy I found it and plan on using it for future web projects. Rebuilding WildHeart's website with it is near the top of the list.
+
+[See the repo on GitHub.](https://github.com/bigcatplichta/portfolio)
