--- a/content/posts/2020-06-15-porfolio.md
+++ b/content/posts/2020-06-15-porfolio.md
@@ -25,4 +25,6 @@ After cloning a few different projects from the Gatsby showcase to pick apart, I
 
 Gatsby is incredibly easy to develop with. I'm very happy I found it and plan on using it for future web projects. Rebuilding WildHeart's website with it is near the top of the list.
 
+I'm still playing around with all the code here, and I haven't yet delved into how GraphQL is working its magic. I'm excited to learn more so I can start building with it.
+
 [See the repo on GitHub.](https://github.com/bigcatplichta/portfolio)
